5th commit exercise Image Table

--- a/FSWD30-HTML-Day02-Basic_Exercise_Semantic_Elements.html
+++ b/FSWD30-HTML-Day02-Basic_Exercise_Semantic_Elements.html
@@ -46,13 +46,15 @@
 		<p>1973 (44 years ago) (1753)</p>
 
 		<h3>Size / Holdings</h3>
-		<ul>over 150,000,000 items </ul>
-		<ul>13,950,000 books</ul>
-		<ul>824,101 serial titles</ul>
-		<ul>8,266,276 philatelic items</ul>
-		<ul>4,347,505 cartographic items</ul>
-		<ul>1,607,885 music scores </ul>
-		<ul>6,000,000 sound recordings</ul>
+		<ul>
+			<li>over 150,000,000 items</li>
+			<li>13,950,000 books</li>
+			<li>824,101 serial titles</li>
+			<li>8,266,276 philatelic items</li>
+			<li>4,347,505 cartographic items</li>
+			<li>1,607,885 music scores</li>
+			<li>6,000,000 sound recordings</li>
+		</ul>
 	</aside>
 
 	<footer><a href="https://en.wikipedia.org/wiki/British_Library" target="_blank">Link to the Wikipedia Page about The British Library</a></footer>
